fix display flex on wraper of office and wrapper.

--- a/src/components/OfficeTable/OfficeTable.css
+++ b/src/components/OfficeTable/OfficeTable.css
@@ -5,5 +5,5 @@
 
 .ant-collapse-content-box {
   display: flex;
-  flex: wrap;
+  flex-wrap: wrap;
 }
